[package]
name = "async-tcp-channel"
authors = ["Zhongdong Yang<zhongdong_y@outlook.com>"]
repository = "https://github.com/zhongdongy/async-tcp-channel.git"
homepage = "https://github.com/zhongdongy/async-tcp-channel"
version = "0.1.4"
edition = "2021"
categories = ["network-programming"]
keywords = ["async", "tcp-channel"]
license-file = "LICENSE"
include = ["/src"]
description = "A low level TCP socket/stream based message channel implementation."

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
queues = "1.1.0"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }

[lib]
name = "atc"
path = "src/lib.rs"


[[bin]]
name = "client"
path = "src/client.rs"
test = false
bench = false

[[bin]]
name = "server"
path = "src/server.rs"
test = false
bench = false
